crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_missing_custom_inlined_functions.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ as Component, $ as onRender, useStore, wrap, useEffect } from "@qwik.dev/core";

export const useMemo$ = (qrt) => {
  useEffect(qrt);
};

export const App = component$((props) => {
  const state = useStore({ count: 0 });
  useMemo$(() => {
    console.log(state.count);
  });
  return $(() => <div>{state.count}</div>);
});

=== test.js ===
import { _wrapProp } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore, useEffect } from "@qwik.dev/core";
export const useMemo$ = (qrt) => {
  useEffect(qrt);
};
export const App = component$((props) => {
  const state = useStore({
    count: 0,
  });
  useMemo$(() => {
    console.log(state.count);
  });
  return $(() =>
    /* @__PURE__ */ _jsxSorted("div", null, null, _wrapProp(state, "count"), 3, "u6_0"),
  );
});

=== DIAGNOSTICS ===

[
  {
    "category": "error",
    "code": "C05",
    "file": "test.tsx",
    "message": "Found 'useMemo$' but did not find the corresponding 'useMemoQrl' exported in the same file. Please check that it is exported and spelled correctly",
    "highlights": [
      {
        "lo": 244,
        "hi": 252,
        "startLine": 9,
        "startCol": 3,
        "endLine": 9,
        "endCol": 10
      }
    ],
    "suggestions": null,
    "scope": "optimizer"
  }
]
