crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_multi_capture.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";

export const Foo = component$(({ foo }) => {
  const arg0 = 20;
  return $(() => {
    const fn = ({ aaa }) => aaa;
    return (
      <div>
        {foo}
        {fn()}
        {arg0}
      </div>
    );
  });
});

export const Bar = component$(({ bar }) => {
  return $(() => {
    return <div>{bar}</div>;
  });
});

=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Bar_component_XXXXXXXXXXXX");
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
);
export const Bar = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Bar_component_XXXXXXXXXXXX"),
);

=== test.tsx_Foo_component_XXXXXXXXXXXX.jsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_1_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = (_rawProps) => {
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_1_XXXXXXXXXXXX", [_rawProps]);
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "jsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "_rawProps"
  ]
}
*/

=== test.tsx_Foo_component_1_XXXXXXXXXXXX.jsx === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Foo_component_1_XXXXXXXXXXXX = () => {
  const _rawProps = _captures[0];
  const fn = ({ aaa }) => aaa;
  return (
    <div>
      {_rawProps.foo}
      {fn()}
      {20}
    </div>
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "jsx",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "_rawProps"
  ]
}
*/

=== test.tsx_Bar_component_XXXXXXXXXXXX.jsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Bar_component_1_XXXXXXXXXXXX");
export const Bar_component_XXXXXXXXXXXX = (_rawProps) => {
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Bar_component_1_XXXXXXXXXXXX", [_rawProps]);
};

/*
{
  "origin": "test.tsx",
  "name": "Bar_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Bar_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Bar_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "jsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "_rawProps"
  ]
}
*/

=== test.tsx_Bar_component_1_XXXXXXXXXXXX.jsx === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Bar_component_1_XXXXXXXXXXXX = () => {
  const _rawProps = _captures[0];
  return <div>{_rawProps.bar}</div>;
};

/*
{
  "origin": "test.tsx",
  "name": "Bar_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Bar_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Bar_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "jsx",
  "parent": "Bar_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "_rawProps"
  ]
}
*/

=== DIAGNOSTICS ===

[]
