crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_noop_dev_mode.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore, serverStuff$, $ } from "@qwik.dev/core";

export const App = component$(() => {
  const stuff = useStore();
  serverStuff$(async () => {
    // should be removed but keep scope
    console.log(stuff.count);
  });
  serverStuff$(async () => {
    // should be removed
  });

  return (
    <Cmp>
      <p class="stuff" shouldRemove$={() => stuff.count} onClick$={() => console.log("warn")}>
        Hello Qwik
      </p>
    </Cmp>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrlDEV(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX", {
    file: "/hello/from/dev/test.tsx",
    lo: 104,
    hi: 469,
    displayName: "test.tsx_App_component",
  }),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrlDEV } from "@qwik.dev/core";
import { serverStuffQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const App_component_XXXXXXXXXXXX = () => {
  const stuff = useStore();
  serverStuffQrl(
    /* @__PURE__ */ _noopQrlDEV(
      "App_component_serverStuff_ebyHaP15ytQ",
      {
        file: "/hello/from/dev/test.tsx",
        lo: 0,
        hi: 0,
        displayName: "test.tsx_App_component_serverStuff",
      },
      [stuff],
    ),
  );
  serverStuffQrl(
    /* @__PURE__ */ _noopQrlDEV("App_component_serverStuff_1_PQCqO0ANabY", {
      file: "/hello/from/dev/test.tsx",
      lo: 0,
      hi: 0,
      displayName: "test.tsx_App_component_serverStuff_1",
    }),
  );
  return /* @__PURE__ */ _jsxSorted(
    Cmp,
    null,
    null,
    /* @__PURE__ */ _jsxSorted(
      "p",
      null,
      {
        class: "stuff",
        shouldRemove$: /* @__PURE__ */ _noopQrlDEV(
          "App_component_Cmp_p_shouldRemove_uU0MG0jvQD4",
          {
            file: "/hello/from/dev/test.tsx",
            lo: 0,
            hi: 0,
            displayName: "test.tsx_App_component_Cmp_p_shouldRemove",
          },
          [stuff],
        ),
        "q-e:click": /* @__PURE__ */ _noopQrlDEV("App_component_Cmp_p_q_e_click_Yl4ybrJWrt4", {
          file: "/hello/from/dev/test.tsx",
          lo: 0,
          hi: 0,
          displayName: "test.tsx_App_component_Cmp_p_q_e_click",
        }),
      },
      "Hello Qwik",
      3,
      null,
      {
        fileName: "/hello/from/dev/test.tsx",
        lineNumber: 15,
        columnNumber: 7,
      },
    ),
    3,
    "u6_0",
    {
      fileName: "/hello/from/dev/test.tsx",
      lineNumber: 14,
      columnNumber: 5,
    },
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
