crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_of_synchronous_qrl.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { sync$, component$ } from "@qwik.dev/core";

export default component$(() => {
  return (
    <>
      <input
        onClick$={sync$(function (event, target) {
          // comment should be removed
          event.preventDefault();
        })}
      />
      <input
        onClick$={sync$((event, target) => {
          event.preventDefault();
        })}
      />
      <input onClick$={sync$((event, target) => event.preventDefault())} />
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _qrlSync } from "@qwik.dev/core";
export const test_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        "input",
        {
          "q-e:click": _qrlSync(function (event, target) {
            // comment should be removed
            event.preventDefault();
          }, "function(event,target){event.preventDefault();}"),
        },
        null,
        null,
        2,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "input",
        {
          "q-e:click": _qrlSync((event, target) => {
            event.preventDefault();
          }, "(event,target)=>{event.preventDefault();}"),
        },
        null,
        null,
        2,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "input",
        {
          "q-e:click": _qrlSync(
            (event, target) => event.preventDefault(),
            "(event,target)=>event.preventDefault()",
          ),
        },
        null,
        null,
        2,
        null,
      ),
    ],
    1,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
