crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_optimization_issue_4386.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export const FOO_MAPPING = {
  A: 1,
  B: 2,
  C: 3,
};

export default component$(() => {
  const key = "A";
  const value = FOO_MAPPING[key];

  return <>{value}</>;
});

=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export const FOO_MAPPING = {
  A: 1,
  B: 2,
  C: 3,
};
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(() => {
    return <>{FOO_MAPPING["A"]}</>;
  }, "test_component_LUXeXe0DQrg"),
);

=== DIAGNOSTICS ===

[]
