crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_parsed_inlined_qrls.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { componentQrl, inlinedQrl, useStore, jsxs, jsx, useLexicalScope } from "@qwik.dev/core";

export const App = /* @__PURE__ */ componentQrl(
  inlinedQrl(() => {
    useStyles$(inlinedQrl(STYLES, "STYLES_odz7dfdfdM"));
    useStyles$(inlinedQrl(STYLES, "STYLES_odzdfdfdM"));

    const store = useStore({
      count: 0,
    });
    return /* @__PURE__ */ jsxs("div", {
      children: [
        /* @__PURE__ */ jsxs("p", {
          children: ["Count: ", store.count],
        }),
        /* @__PURE__ */ jsx("p", {
          children: /* @__PURE__ */ jsx("button", {
            onClick$: inlinedQrl(
              () => {
                const [store] = useLexicalScope();
                return store.count++;
              },
              "App_component_div_p_button_onClick_odz7eidI4GM",
              [store],
            ),
            children: "Click",
          }),
        }),
      ],
    });
  }, "App_component_Fh88JClhbC0"),
);

export const STYLES = ".red { color: red; }";

=== test.tsx ===
import { _wrapProp } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl, inlinedQrl, useStore, useLexicalScope } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(() => {
    useStyles$(/* @__PURE__ */ inlinedQrl(STYLES, "s_odz7dfdfdM"));
    useStyles$(/* @__PURE__ */ inlinedQrl(STYLES, "s_odzdfdfdM"));
    const store = useStore({
      count: 0,
    });
    return /* @__PURE__ */ _jsxSorted(
      "div",
      null,
      null,
      [
        /* @__PURE__ */ _jsxSorted("p", null, null, ["Count: ", _wrapProp(store, "count")], 3, null),
        /* @__PURE__ */ _jsxSorted(
          "p",
          null,
          null,
          /* @__PURE__ */ _jsxSorted(
            "button",
            {
              "q-e:click": /* @__PURE__ */ inlinedQrl(
                () => {
                  const [store] = useLexicalScope();
                  return store.count++;
                },
                "s_odz7eidI4GM",
                [store],
              ),
            },
            null,
            "Click",
            2,
            null,
          ),
          1,
          null,
        ),
      ],
      1,
      "u6_0",
    );
  }, "s_Fh88JClhbC0"),
);
export const STYLES = ".red { color: red; }";

=== DIAGNOSTICS ===

[]
