crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_preserve_filenames.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export const App = component$((props) => {
  return (
    <Cmp>
      <p class="stuff" onClick$={() => console.log("warn")}>
        Hello Qwik
      </p>
    </Cmp>
  );
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl((props) => {
    return /* @__PURE__ */ _jsxSorted(
      Cmp,
      null,
      null,
      /* @__PURE__ */ _jsxSorted(
        "p",
        null,
        {
          class: "stuff",
          "q-e:click": /* @__PURE__ */ inlinedQrl(
            () => console.log("warn"),
            "App_component_Cmp_p_q_e_click_Yl4ybrJWrt4",
          ),
        },
        "Hello Qwik",
        3,
        null,
      ),
      3,
      "u6_0",
    );
  }, "App_component_ckEPmXZlub0"),
);

=== DIAGNOSTICS ===

[]
