crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_preserve_filenames_segments.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export const App = component$((props: Stuff) => {
  foo();
  return (
    <Cmp>
      <p class="stuff" onClick$={() => console.log("warn")}>
        Hello Qwik
      </p>
    </Cmp>
  );
});

export const foo = () => console.log("foo");

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX.js");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);
export const foo = () => console.log("foo");

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { foo } from "./test.tsx";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_Cmp_p_q_e_click_XXXXXXXXXXXX.js");
export const App_component_XXXXXXXXXXXX = (props) => {
  foo();
  return /* @__PURE__ */ _jsxSorted(
    Cmp,
    null,
    null,
    /* @__PURE__ */ _jsxSorted(
      "p",
      null,
      {
        class: "stuff",
        "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_Cmp_p_q_e_click_XXXXXXXXXXXX"),
      },
      "Hello Qwik",
      3,
      null,
    ),
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_App_component_Cmp_p_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const App_component_Cmp_p_q_e_click_XXXXXXXXXXXX = () => console.log("warn");

/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_Cmp_p_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_Cmp_p_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
